# opencv-esp32

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  opencv-esp32.cpp  opencv-esp32.hpp
